翻訳APIをサポートされているものに変更 JDKを8から21に変更（MC 1.21+はJDK21が必要）